fix: adjust mobile Clippy container positioning

--- a/src/styles/clippy/clippy.css
+++ b/src/styles/clippy/clippy.css
@@ -73,7 +73,7 @@
 @media (max-width: 768px) {
   .clippy-container {
     bottom: 70px;
-    right: 10px;
+    right: 25px;
     width: 100px;
     height: 75px;
   }
